@@ -2127,6 +2127,7 @@ AC_REPLACE_FUNCS(cbrt)
 AC_REPLACE_FUNCS(crypt)
 AC_REPLACE_FUNCS(dup2)
 AC_REPLACE_FUNCS(erf)
+AC_REPLACE_FUNCS(explicit_bzero)
 AC_REPLACE_FUNCS(ffs)
 AC_REPLACE_FUNCS(finite)
 AC_REPLACE_FUNCS(flock)
@@ -2255,6 +2256,7 @@ AC_CHECK_FUNCS(malloc_usable_size)
 AC_CHECK_FUNCS(malloc_size)
 AC_CHECK_FUNCS(mblen)
 AC_CHECK_FUNCS(memalign)
+AC_CHECK_FUNCS(memset_s)
 AC_CHECK_FUNCS(writev)
 AC_CHECK_FUNCS(memrchr)
 AC_CHECK_FUNCS(memmem)
